--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,16 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'android-apt'
+
 
 android {
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
     defaultConfig {
         applicationId "in.tkch.androidbootstrap"
@@ -36,4 +43,5 @@ dependencies {
     apt "org.projectlombok:lombok:1.14.8"
     apt 'com.google.dagger:dagger-compiler:2.0-SNAPSHOT'
     compile 'com.google.code.findbugs:jsr305:3.0.0'
+    retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:1.8.1'
 }
